--- a/src/App.css
+++ b/src/App.css
@@ -137,8 +137,8 @@ button {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-image: url('./components/background_audit.png');
   background-size: cover;
   background-position: center;
